<?xml version="1.0"?>
<package format="3">
  <name>rsapicam</name>
  <version>1.0.0</version>
  <description>
    ament wrapped Raspicam Libarry
  </description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type >ament_cmake</build_type>
  </export>

</package>